--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,8 +2,8 @@
     "name": "jug_xl CodeSpace Environment",
     "image": "ghcr.io/eic/jug_dev:testing",
 
-    // Uncomment the next line to run commands after the container is created.
-    "postCreateCommand": "gcc -v",
+    // Run commands after the container is created.
+    "postCreateCommand": "git clone https://github.com/eic/ecce.git ~/ecce",
 
     // Comment out the next line if you want to run as root instead
     //"remoteUser": "vscode",
